Fix form spacing

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -105,7 +105,8 @@ form[role="form"] * {
 }
 
 label {
-	white-space: nowrap;
+	padding-left: 5px !important;
+	padding-right: 5px !important;
 }
 
 .form-control {
